objects/ssot__FulfillmentStepSource__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentStepId__c</fullName>
        <label>FulfillmentStep</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Fulfillment Step Source Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceOrderProductId__c</fullName>
        <label>Source Order Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceOrderProductObject__c</fullName>
        <label>Source Order Product Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545870418_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentStepSource_SourceOrderPro_rel</label>
        <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
        <relationshipLabel>FulfillmentStepSource_SourceOrderPro_rel</relationshipLabel>
        <relationshipName>rel_1718545870418_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718546699076_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentStepSource_FulfillmentSte_rel</label>
        <referenceTo>ssot__FulfillmentStep__dlm</referenceTo>
        <relationshipLabel>FulfillmentStepSource_FulfillmentSte_rel</relationshipLabel>
        <relationshipName>rel_1718546699076_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>